--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ font-weight: bold;
 }
 #wrapper {
 	font-family: 'Open Sans', sans-serif;
-	color: #d3a549;
+	color: #a1a1a1;
 	width: 1023px;
 	margin: 120px auto;
 	background: #fff;
